--- a/cmake/pch.h.in
+++ b/cmake/pch.h.in
@@ -14,6 +14,11 @@
 #include <iostream>
 #include <string>
 #include <vector>
+#include <functional>
+#include <list>
+#include <regex>
+#include <chrono>
+
 
 #define UNUSED_PARAM(P) ((void)P)
 
