--- a/imgui.ini
+++ b/imgui.ini
@@ -17,8 +17,17 @@ Size=446,720
 Collapsed=0
 
 [Window][Image View]
-Pos=0,0
-Size=1364,748
+Size=684,742
+Collapsed=0
+
+[Window][Image View Target]
+Pos=5,377
+Size=674,366
+Collapsed=0
+
+[Window][Image View Source]
+Pos=5,5
+Size=674,366
 Collapsed=0
 
 [Docking][Data]
