--- a/PhotoFaceSwap/CMakeLists.txt
+++ b/PhotoFaceSwap/CMakeLists.txt
@@ -5,9 +5,6 @@ set(BUILD_SHARED_LIBS OFF)
 set(USE_AVX_INSTRUCTIONS ON)
 set(DLIB_NO_GUI_SUPPORT ON)
 set(DLIB_LINK_WITH_SQLITE3_STR OFF)
-set(WITH_GTK OFF)
-set(WITH_OPENGL ON)
-set(WITH_WIN32UI OFF)
 # fetch content dlib libraries
 include(FetchContent)
 FetchContent_Declare(
@@ -29,7 +26,7 @@ file(GLOB_RECURSE TARGET_SOURCES ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 file(GLOB HEADER_GUI ${CMAKE_CURRENT_LIST_DIR}/gui/*.hpp)
 file(GLOB SRC_GUI ${CMAKE_CURRENT_LIST_DIR}/gui/*.cpp)
 
-find_package(OpenCV REQUIRED COMPONENTS opencv_core opencv_imgcodecs
+find_package(OpenCV CONFIG REQUIRED COMPONENTS opencv_core opencv_imgcodecs
                                         opencv_imgproc opencv_photo opencv_videoio)
 message(${OpenCV_LIBS})
 
@@ -43,11 +40,9 @@ if(OpenCV_FOUND)
   include_directories(${OpenCV_INCLUDE_DIRS} "/usr/include/opencv4" ${dlib_DIR}
                       ${CMAKE_CURRENT_LIST_DIR}/include)
 
-  add_executable(${TARGET_NAME} ${CMAKE_CURRENT_LIST_DIR}/CliMain.cpp
-                                ${CMAKE_CURRENT_LIST_DIR}/shape_predictor.o)
-  target_sources(${TARGET_NAME} PRIVATE ${TARGET_SOURCES})
+  add_executable(${TARGET_NAME} ${CMAKE_CURRENT_LIST_DIR}/CliMain.cpp)
+  target_sources(${TARGET_NAME} PRIVATE ${TARGET_SOURCES} ${CMAKE_CURRENT_LIST_DIR}/shape_predictor.obj)
   target_link_libraries(${TARGET_NAME} PUBLIC dlib::dlib ${OpenCV_LIBS})
-  target_link_options(${TARGET_NAME} PUBLIC -v -s)
 
   target_enable_warning(${TARGET_NAME})
   if(PFS_ENABLE_SANITIZER)
@@ -59,19 +54,20 @@ if(OpenCV_FOUND)
   target_precompile_headers(${TARGET_NAME} PRIVATE ${PROJECT_BINARY_DIR}/pch.h)
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "ENABLING OPTIMIZATION on RELEASE BUILD")
-    target_compile_options(${TARGET_NAME} PRIVATE -O3 -mavx -DNDEBUG)
+    if(MSVC)
+      target_compile_options(${TARGET_NAME} PRIVATE /arch:AVX2 /fp:fast) 
+    else()
+      target_link_options(${TARGET_NAME} PUBLIC -v -s)
+      target_compile_options(${TARGET_NAME} PRIVATE -mavx2 -Ofast)
+    endif()
   endif()
 
-  add_executable(
-    ${TARGET_NAME}-Gui
-    ${CMAKE_CURRENT_LIST_DIR}/GuiMain.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/shape_predictor.o ${HEADER_GUI} ${SRC_GUI})
-  target_sources(${TARGET_NAME}-Gui PRIVATE ${TARGET_SOURCES})
+  add_executable(${TARGET_NAME}-Gui ${CMAKE_CURRENT_LIST_DIR}/GuiMain.cpp)
+  target_sources(${TARGET_NAME}-Gui PRIVATE ${TARGET_SOURCES} ${CMAKE_CURRENT_LIST_DIR}/shape_predictor.obj ${HEADER_GUI} ${SRC_GUI})
   target_include_directories(${TARGET_NAME}-Gui
                              PRIVATE ${CMAKE_CURRENT_LIST_DIR}/gui)
   target_link_libraries(${TARGET_NAME}-Gui PUBLIC dlib::dlib mahi::gui
                                                   ${OpenCV_LIBS})
-  target_link_options(${TARGET_NAME}-Gui PUBLIC -v -s)
   target_compile_definitions(${TARGET_NAME}-Gui PUBLIC PFS_GUI)
 
   target_enable_warning(${TARGET_NAME}-Gui)
@@ -85,7 +81,14 @@ if(OpenCV_FOUND)
                             ${PROJECT_BINARY_DIR}/pch.h)
   if(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "ENABLING OPTIMIZATION on RELEASE BUILD")
-    target_compile_options(${TARGET_NAME}-Gui PRIVATE -O3 -mavx -DNDEBUG)
+    if(MSVC)
+      target_compile_definitions(${TARGET_NAME}-Gui PUBLIC _WINDOWS WINDOW)
+      target_link_options(${TARGET_NAME}-Gui PUBLIC  /SUBSYSTEM:WINDOWS)
+      target_compile_options(${TARGET_NAME}-Gui PRIVATE /arch:AVX2 /fp:fast /EH) 
+    else()
+      target_link_options(${TARGET_NAME}-Gui PUBLIC -v -s)
+      target_compile_options(${TARGET_NAME}-Gui PRIVATE -mavx2 -Ofast)
+    endif()
   endif()
 
   # embed_resource("model/shapepredictor.dat", "include/shapepredictor.hpp",
