Update: Update Image Manipulation Fiture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ option(PFS_ENABLE_SANITIZER "enabling compiler sanitizer" OFF)
 if(MSVC)
 set(CMAKE_TOOLCHAIN_FILE "D:/VCPKG/vcpkg/scripts/buildsystems/vcpkg.cmake")
 endif(MSVC)
-
+set(LLVM_ENABLE_RTTI ON)
+set(LLVM_ENABLE_EH ON)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
